--- a/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
@@ -2368,4 +2368,34 @@ NEC – NWC – SEC - SWC</value>
     <value>UWP Relational Modeler Desktop Application</value>
     <comment>AppDiscription</comment>
   </data>
+  <data name="00FS" xml:space="preserve">
+    <value>Has an Error,  Click to expand.</value>
+  </data>
+  <data name="200N" xml:space="preserve">
+    <value>Repository Import Error</value>
+  </data>
+  <data name="201N" xml:space="preserve">
+    <value>Repository Export Error</value>
+  </data>
+  <data name="202N" xml:space="preserve">
+    <value>Compute  Missing Select Clause</value>
+  </data>
+  <data name="203N" xml:space="preserve">
+    <value>Compute Mising Related Select Clause</value>
+  </data>
+  <data name="204N" xml:space="preserve">
+    <value>Compute Invalid Select Clause</value>
+  </data>
+  <data name="205N" xml:space="preserve">
+    <value>Compute Invalid Related Select Clause</value>
+  </data>
+  <data name="206N" xml:space="preserve">
+    <value>Compute Invalid Related Where Clause</value>
+  </data>
+  <data name="207N" xml:space="preserve">
+    <value>Query Invalid Select Clause</value>
+  </data>
+  <data name="208N" xml:space="preserve">
+    <value>Query Invalid Where Clause</value>
+  </data>
 </root>
