Instalment of ValidateQueryXStore refactor

--- a/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
@@ -2371,76 +2371,76 @@ NEC – NWC – SEC - SWC</value>
   <data name="00FS" xml:space="preserve">
     <value>Has an Error,  Click to expand.</value>
   </data>
-  <data name="200N" xml:space="preserve">
+  <data name="201N" xml:space="preserve">
     <value>Repository Import Error</value>
   </data>
-  <data name="201N" xml:space="preserve">
+  <data name="200N" xml:space="preserve">
     <value>Repository Export Error</value>
   </data>
-  <data name="203N" xml:space="preserve">
+  <data name="216N" xml:space="preserve">
     <value>Compute  Missing Root Query</value>
   </data>
-  <data name="204N" xml:space="preserve">
+  <data name="214N" xml:space="preserve">
     <value>Compute Circular Dependancy</value>
   </data>
-  <data name="205N" xml:space="preserve">
+  <data name="215N" xml:space="preserve">
     <value>Compute  Missing Select Clause</value>
   </data>
-  <data name="206N" xml:space="preserve">
+  <data name="213N" xml:space="preserve">
     <value>Compute Invalid Select Clause</value>
   </data>
-  <data name="207N" xml:space="preserve">
+  <data name="212N" xml:space="preserve">
     <value>Compute Unresolved Select Clause</value>
   </data>
-  <data name="208N" xml:space="preserve">
+  <data name="211N" xml:space="preserve">
     <value>Compute Missing Related Select Clause</value>
   </data>
-  <data name="209N" xml:space="preserve">
+  <data name="210N" xml:space="preserve">
     <value>Compute Problem With Related Where/Select Clause</value>
   </data>
-  <data name="20AN" xml:space="preserve">
+  <data name="221N" xml:space="preserve">
     <value>Query Invalid Where Clause</value>
   </data>
-  <data name="20BN" xml:space="preserve">
+  <data name="223N" xml:space="preserve">
     <value>Query Invalid Select Clause</value>
   </data>
-  <data name="202N" xml:space="preserve">
+  <data name="217N" xml:space="preserve">
     <value>Compute Value Overflow</value>
   </data>
-  <data name="20CN" xml:space="preserve">
+  <data name="220N" xml:space="preserve">
     <value>Query Unresulved Where Clause</value>
   </data>
-  <data name="20DN" xml:space="preserve">
+  <data name="222N" xml:space="preserve">
     <value>Query Unresolved Select Clause</value>
   </data>
-  <data name="20EN" xml:space="preserve">
+  <data name="224N" xml:space="preserve">
     <value>Query Value Overflow Where Clause</value>
   </data>
-  <data name="20FN" xml:space="preserve">
+  <data name="225N" xml:space="preserve">
     <value>Query Value Overflow Select Clause</value>
   </data>
-  <data name="210N" xml:space="preserve">
+  <data name="2F0N" xml:space="preserve">
     <value>b</value>
   </data>
-  <data name="211N" xml:space="preserve">
+  <data name="2F1N" xml:space="preserve">
     <value>c</value>
   </data>
-  <data name="212N" xml:space="preserve">
+  <data name="2F2N" xml:space="preserve">
     <value>d</value>
   </data>
-  <data name="213N" xml:space="preserve">
+  <data name="2F3N" xml:space="preserve">
     <value>e</value>
   </data>
-  <data name="214N" xml:space="preserve">
+  <data name="2F4N" xml:space="preserve">
     <value>f</value>
   </data>
-  <data name="215N" xml:space="preserve">
+  <data name="2F5N" xml:space="preserve">
     <value>g</value>
   </data>
-  <data name="216N" xml:space="preserve">
+  <data name="2F6N" xml:space="preserve">
     <value>h</value>
   </data>
-  <data name="217N" xml:space="preserve">
+  <data name="2F7N" xml:space="preserve">
     <value>i</value>
   </data>
 </root>
