Added ForcedRefresh property to partial model tree views ErrorRoot and ChangeRoot

--- a/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
@@ -2452,4 +2452,7 @@ NEC – NWC – SEC - SWC</value>
   <data name="033A" xml:space="preserve">
     <value>R</value>
   </data>
+  <data name="010S" xml:space="preserve">
+    <value>SortMode: (none, assending, descending) </value>
+  </data>
 </root>
